<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombreMariposa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etNombreMariposa"
        android:inputType="text"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/rgUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rgEspecie"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/rbGusano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMariposa" />

        <RadioButton
            android:id="@+id/rbMariposa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbGusano" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/naranja"
        android:text="@string/btnRegistrar" />
</LinearLayout>