<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/ivMariposa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivMariposa"
        app:srcCompat="@drawable/butterflies" />

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:text="@string/tvBienvenida"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cafe"
        android:text="@string/btnIniciar"
        android:textSize="20dp" />

</LinearLayout>